# QnA-end-to-end-chatbot-using-google-gemini-api

./: README.md  main.py  pyproject.toml  requirement.txt
